--- a/src/statics/config/app.config.json
+++ b/src/statics/config/app.config.json
@@ -41,7 +41,7 @@
             "telegram": "https://t.me/Boidcom_official"
         },
         "api":{
-            "url": "https://api.daclify.com"
+            "url": "https://jungle.eosn.io"
         }
     },
     "wax":{
